--- a/css/styles.css
+++ b/css/styles.css
@@ -9866,6 +9866,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 .text-muted {
   color: #6c757d !important;
+  font-size: 0.8rem !important;
 }
 
 .text-black-50 {
